@@ -1,7 +1,7 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1,SHA512
 
-bb679b462a01d222d4d17d8254ade947692d05cb  16500 ChangeLog
+642be07e715d5dd025eb089a8cdcee934388cd36  16587 ChangeLog
 1c2d983c7261aac7f3acb847892b9600de8c4307   2889 Makefile
 7103c2ecddea29134185e30fbf7ba2daf3f11c08  10264 configure
 4cc77b90af91e615a64ae04893fdffa7939db84c  18092 gpl-2.0.txt
@@ -21,23 +21,23 @@ edd3909afc7ea08a5108aa2b26425f01596eca52   1433 misc/evilvte.desktop
 83055c532a24e778aabd9b5aa86cf9ee3d1f17a9    353 misc/evilvte.xml
 299e5764800d97fb4d4a7436eee21bb32958f105   1882 misc/manpage.1
 a83357473eb7c431a9f8e2813e02553d5ffa54b7    338 misc/showvte.1
-9f06e8ce1e9636956fb83dde202cdbad0715207d  12158 src/config.h
-05c2e4b3301f67aa827b20d36e281b532f7bd836 168671 src/evilvte.c
+b3d4693cf3009be584d286e1cc9b264365dedb80  12158 src/config.h
+79f72a1aa70ece9e37f536640261e39bb17e6e4c 169265 src/evilvte.c
 838b43b5274c2e7f173aeb0d6b24aea85913e79d  16438 src/process.sh
 -----BEGIN PGP SIGNATURE-----
 
-iEYEARECAAYFAlFfxOkACgkQdEpXpumNYVlVPACeL+2WB2bqZK05O+bRj43wUcNf
-JQQAn0Jz1N4QBFXyaa3wPhjZAQIkpu5CiQIcBAEBCgAGBQJRX8TpAAoJELc3H0m+
-i6gZHogP/jpV8Ao6E6tooyq536BwQBkiHzeJMhbUoQC/Noq88a++Q9FD2LJ0xsQj
-MzzLqj8JkPGpdxAth7NV28Sumb4AyNk1gwNb1IxLODg/+R7wtE4dVoqTiliMbDV1
-W6M7n3WmVgAJB7fPbwNC6MnL1gpN1vJceBhEWSWksBJ5ADrljVRWgjRjizM281uI
-nCpybJ/rqRbUYIzdUVM9jHwTiWyvfjaqPywjwpt88OFUiWlHngK6axjcp55pJjmA
-JaILgjQQ9hv9JIrJpbuqidxMkMv7+AZ+fFdnPVaV5QLd27vYeu89fV3mPoYExFSQ
-uCcMzg0QYj12xxaiCl1yJPzJk6VoNDlaBOrht4syRtPLpWFrtPQAZ1FwSeMjlh+I
-OLiPMkbJQ2weIESS1Qm3YwUYH5ycDuw9ODc/kRM0EWN1PFjFHN/3w604eh6p9OhB
-1ubt+VsjQNRpjqHqF+xumfT+wZKC3gWAWD5LUN3KxreEpIbfLlCaKxJfrp2Wr0Bm
-JsKZYwHEbs8a4ql+8NftKWghwHw59emA6BoxEGRYo2wtAfQJSYOgXhaskAvHhuZg
-x5oh9jKrlJYmdzECxnYd951dTTV39i7Mg/1yOVZIx5/mHiPb0j/PKqFiNwQJlDcp
-96pTOm7aEIsJU32Tggm7dApImfGNRn29OslDmRfjoL7274/60/YQ
-=a2qu
+iEYEARECAAYFAlFfxVkACgkQdEpXpumNYVnhWgCeM8iyBOeDQuNMAIdJKJXvrEoU
+CtsAnjeSshJWFvGXi2GRWru0wxiO/oGviQIcBAEBCgAGBQJRX8VZAAoJELc3H0m+
+i6gZdnAQAIHyf52sRe4CJqvMBWOlY/Z4UerVJnX3WCRdKrOKUkwFTZUS6cFu9eR/
+KNP04lw7xncXXvQLRdj9yZU7zT4fzVe0XpHZTFU8+YtyapcCJB9o0PCcMrTgk+5O
+ckHXfufADuoaJVrKrYh5TYMkkfuefBbsT1zH8qkmQVRWMoDuj0q7nC3RxxwzhaiN
+G8VL9VwTeEhjcrljLfVbh0gp5+kxWG14+YuG9o2SHcndsLiv2H16bHFszV+HyGkC
+BaRfUVjkfIwqwCsHBM3W17ydWFC9manK81vf4IDIthqjoCbn0kVzD2dAZ8YbKtk2
+rSD3jmTBcCPYeboL1F8EuaiJ1S8ZE3ZGXcfe+SKK36PprXnD4rBslHt2GYiB0Ovr
+zgnGCfhkM4eFVR9qVvgeo2HolUnv+L/pWn1upuDzWShkGDb21eItbDElHmgcT17b
+pbJk0MvjXd0G8oR2lRt/kxrOywUazEVlq27DdDU4Qz61ybDpT6htKLcS+2RMH8LC
+VzaIGmWsnJ9x5uLPdGTXvwLWzwBF5mgwmxIEu8IzD+Ia17KQUcsJNx02kvE+Uh67
+mFj1T9EeM2e0bxDYo0tnM7j8jWn4VlJS/XVfYA2rAXoh2S08SLIlOwGs9Rewuqdf
+t0bIGBG50JOYYoDelvfM1r8nAK/0tGiAYC67nvyarFJJBsgFWhhx
+=dovx
 -----END PGP SIGNATURE-----
